feat: allow creating github destinations
